[FIX] l10n_ca_check_printing: wrong alignment in print check middle
If check layout is set to middle, and if the customer's address
is using multiple lines, the memo on the cheque is being squished
into the address of the vendor.

opw-2056132

closes odoo/enterprise#5195

--- a/l10n_ca_check_printing/static/src/scss/report_check_middle.scss
+++ b/l10n_ca_check_printing/static/src/scss/report_check_middle.scss
@@ -62,7 +62,7 @@
         font-size: 0.9em;
     }
     .ckca_memo {
-        top: 2in;
+        top: 2.3in;
         left: 0.63in;
         width: 4.3in;
         text-align: left;
